# linux

./: CLAUDE.md  Cargo.toml  README.md  geisterhand.desktop  geisterhand.service  install.sh
src/: lib.rs  main.rs
src/accessibility/: menu.rs  mod.rs  service.rs
src/input/: backend.rs  keycode_map.rs  mod.rs  portal.rs  uinput.rs  xtest.rs
src/mcp/: mod.rs
src/models/: accessibility.rs  api.rs  mod.rs
src/platform/: display.rs  mod.rs  permissions.rs  process.rs  window.rs
src/screen/: mod.rs  portal.rs  x11.rs
src/server/: http.rs
src/server/routes/: accessibility.rs  click.rs  key.rs  menu.rs  mod.rs  screenshot.rs  scroll.rs  status.rs  type_text.rs  wait.rs
