[package]
name = "geisterhand"
version = "1.3.1"
edition = "2021"
description = "Linux screen automation tool with HTTP API"
license = "MIT"
repository = "https://github.com/Geisterhand-io/linux"
homepage = "https://github.com/Geisterhand-io/linux"
keywords = ["automation", "accessibility", "at-spi2", "screen", "linux"]
categories = ["command-line-utilities", "accessibility"]
readme = "README.md"

[dependencies]
# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Accessibility (AT-SPI2)
atspi = { version = "0.25", features = ["tokio", "zbus"] }
zbus = "5"

# Input injection
evdev = "0.12"
x11rb = { version = "0.13", features = ["xtest", "shm", "randr", "composite"] }
nix = { version = "0.29", features = ["ioctl", "fs"] }

# Screenshots
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Process management
sysinfo = "0.33"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for CLI status command)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Async utilities
futures-util = "0.3"

# Utilities
base64 = "0.22"
anyhow = "1"
thiserror = "1"
